[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/UI_Component/bgImageSettings.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI_Component/BackButton.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI_Component/BackButton_Hover.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI_Component/SoundButton.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI_Component/SoundButton_Hover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI_Component/BGMButton.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI_Component/BGMButton_Hover.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI_Component/DifficultyButton.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI_Component/CreditsButton.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI_Component/DifficultyButton_Hover.png" type="Texture" id=11]
[ext_resource path="res://Sprites/UI_Component/CreditsButton_Hover.png" type="Texture" id=12]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 128.0 ]
}

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 640, 360 )

[node name="BGImage" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.667, 0.6 )
texture = ExtResource( 1 )

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 129.0
margin_top = 579.0
margin_right = 813.0
margin_bottom = 778.0
rect_scale = Vector2( 0.667, 0.6 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="SoundButton" type="TextureButton" parent="."]
margin_left = 129.0
margin_top = 227.0
margin_right = 813.0
margin_bottom = 426.0
rect_scale = Vector2( 0.667, 0.6 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="DifficultyButton" type="TextureButton" parent="."]
margin_left = 129.0
margin_top = 358.0
margin_right = 882.0
margin_bottom = 557.0
rect_scale = Vector2( 0.667, 0.6 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 11 )

[node name="BGMButton" type="TextureButton" parent="."]
margin_left = 695.0
margin_top = 227.0
margin_right = 1379.0
margin_bottom = 426.0
rect_scale = Vector2( 0.667, 0.6 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="CreditsButton" type="TextureButton" parent="."]
margin_left = 695.0
margin_top = 358.0
margin_right = 1521.0
margin_bottom = 557.0
rect_scale = Vector2( 0.667, 0.6 )
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 12 )

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="DifficultyButton" to="." method="_on_DifficultyButton_pressed"]
[connection signal="pressed" from="BGMButton" to="." method="_on_BGMButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
